[package]
name = "uplock"
version = "0.1.4"
authors = ["haydn@tinychain.net"]
edition = "2018"
description = "A futures-aware RwLock with ref_count, upgrade, and downgrade methods"
license = "Apache-2.0"
repository = "https://github.com/haydnv/uplock.git"

keywords = ["async", "future", "lock"]
categories = ["concurrency"]

[dependencies]
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.11", features = ["macros", "rt"] }
